--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
+  "main": "src/app",
   "scripts": {
-    "start": "tsc && node dist/app.ts",
+    "build": "npx tsc",
+    "start": "node dist/app.js",
     "dev": "nodemon - exec 'ts-node' src/app.ts",
     "test": "jest"
   },
@@ -21,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "^5.16.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^8.2.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
