--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "src/app",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npm i && tsc",
     "start": "node dist/app.js",
     "dev": "nodemon - exec 'ts-node' src/app.ts",
     "test": "jest"
